# exchange-cli

./: .gitignore  LICENSE  README.md  exchange-cli.spec  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/plans/: 2026-04-15-email-body-cleaner.md
docs/specs/: 2026-04-15-email-body-cleaner-design.md
exchange_cli/: main.py
exchange_cli/commands/: calendar.py  config.py  contact.py  daemon.py  draft.py  email.py  folder.py  task.py
exchange_cli/core/: config.py  connection.py  content_cleaner.py  daemon.py  output.py  serializers.py
npm/exchange-cli/: install.js  package.json
scripts/: prepare_darwin_arm64_package.py  prepare_platform_package.py
skills/: SKILL.md
tests/: conftest.py  test_calendar.py  test_config.py  test_config_cmd.py  test_connection.py  test_contact.py  test_content_cleaner.py  test_daemon.py  test_draft.py  test_email.py  test_folder.py  test_output.py  test_serializers.py  test_task.py
