[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exchange-cli"
version = "0.1.5"
description = "CLI for Microsoft Exchange Web Services - designed for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
keywords = ["exchange", "ews", "cli", "email", "ai-agent", "office365"]
authors = [{ name = "Jarod" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Communications :: Email",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "click>=8.1,<9",
    "exchangelib>=5.0",
    "cryptography>=41.0",
]

[project.scripts]
exchange-cli = "exchange_cli.main:cli"

[project.urls]
Homepage = "https://github.com/backtomyfuture/exchange-cli"
Issues = "https://github.com/backtomyfuture/exchange-cli/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
